# marketplace

./: .gitignore  README.md  dev-link.sh
.claude-plugin/: marketplace.json
.claude/plans/: staged-wondering-cascade.md
docs/plans/: 2026-01-29-plugin-init-plugins.md
plugins/engram/: .gitignore  .mcp.json  CLAUDE.md  README.md  install.sh  pyproject.toml  uninstall.sh
plugins/engram-mcp/: .mcp.json
plugins/engram-mcp/.claude-plugin/: plugin.json
plugins/engram-mcp/commands/: remember.md  resume.md  search.md  stats.md  sync.md
plugins/engram-mcp/hooks/: hooks.json
plugins/engram-mcp/scripts/: live-index.sh  session-start.sh  validate-remember.sh  validate-resume.sh  validate-search.sh
plugins/engram/.artifacts/: roadmap.md
plugins/engram/.artifacts/fix-double-indexing/: progress.md  summary.md
plugins/engram/.artifacts/fix-mcp-memory-leak/: design.md  progress.md  requirements.md
plugins/engram/.claude/: hooks.json
plugins/engram/.claude-plugin/: plugin.json
plugins/engram/.claude/skills/engram/: SKILL.md
plugins/engram/commands/: remember.md  resume.md  search.md  stats.md  sync.md
plugins/engram/engram/: __init__.py  chunker.py  cli.py  live_indexer.py  mcp_server.py  project_memory.py
plugins/engram/hooks/: hooks.json
plugins/engram/scripts/: live-index.sh
plugins/feature-dev/: README.md
plugins/harness/: .gitignore  LICENSE  README.md
plugins/megatron/: README.md
plugins/plugin-dev/: README.md
plugins/plugin-dev-init/: README.md
plugins/prompt-improver/: README.md
plugins/superpowers/: README.md  RELEASE-NOTES.md
(+230 files in other folders)
