[project]
name = "engram"
version = "0.1.0"
description = "Semantic memory for Claude Code - persistent context across sessions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Steven Mosley", email = "34114851+astrosteveo@users.noreply.github.com"}
]
keywords = ["claude", "memory", "context", "mcp", "ai", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/astrosteveo/engram"
Repository = "https://github.com/astrosteveo/engram"

[project.scripts]
engram = "engram.cli:main"
engram-mcp = "engram.mcp_server:main"
engram-live-index = "engram.live_indexer:run_live_indexer"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
